<resources>

    <string name="app_name">Moments Wedding</string>
    <string name="title_activity_home">Moments Wedding</string>
    <string name="title_app">Moments Wedding</string>

    <!--Login Page-->
    <string name="txt_invite_code">Enter Your Invite Code</string>
    <string name="btn_next">Next</string>

    <!--Mobile Page-->
    <string name="txt_mobile_no">Enter Your Mobile No</string>
    <string name="txt_Note">Please provide your full mobile number \n along with 2 digit country code. \n Eg: 919876543210, 019876543210</string>
    <string name="btn_verification">Verification</string>

    <!--OTP Code Page-->
    <string name="txt_otp_code">Enter OTP Code</string>
    <string name="txt_resend_sms"><u>Resend OTP Code</u></string>
    <string name="btn_submit">Submit</string>

    <!--Guest Name Page-->
    <string name="txt_Name">Enter Your Name</string>

    <!--Home Page-->
    <string name="txt_wedding_countdown">Wedding Countdown</string>
    <string name="txt_Days">Days</string>
    <string name="txt_Hours">Hours</string>
    <string name="txt_Mins">Mins</string>
    <string name="txt_Secs">Secs</string>
    <string name="txt_RSVP">RSVP</string>

    <!--RSVP Page-->
    <string name="title_activity_rsvp">RSVP INFO</string>
    <string name="txt_coming">Are you coming?</string>
    <string name="txt_guest">How Many Guests?</string>
    <string name="txt_Arrival">Arrival</string>
    <string name="hint_PNR">PNR No</string>
    <string name="txt_Departure">Departure</string>
    <string name="txt_sr">Special Remarks</string>
    <string name="txt_reason">Reason</string>
    <string name="txt_wishes">Wishes</string>
    <string name="txt_attend">Attending All Programs?</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="btn_done">Done</string>
    <string name="title_activity_home2">Home2Activity</string>
    <string name="upload_photo_id">Upload Photo Id</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Venue Page-->


</resources>
