<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ankita.momentwedding.RsvpNoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvReason"
            style="@style/Rsvp_TextView"
            android:paddingTop="20dp"
            android:text="@string/txt_reason" />

        <EditText
            android:id="@+id/txtReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"/>

        <TextView
            android:id="@+id/tvWishes"
            style="@style/Rsvp_TextView"
            android:paddingTop="10dp"
            android:text="@string/txt_wishes" />

        <EditText
            android:id="@+id/txtWishes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSRNo"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:textColor="@color/colorTextLight"
            android:text="@string/btn_submit" />

    </LinearLayout>

</FrameLayout>
