<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llDialogOther"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llTopDialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/countdown"
                style="@style/clock_TextView"
                android:text="@string/txt_wedding_countdown"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBottomDialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/txtDate"
                android:textSize="20dp"
                style="@style/clock_TextView"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtDays"
                        style="@style/clock_TextView"
                        android:textSize="30dp" />

                    <TextView
                        android:id="@+id/tvDays"
                        style="@style/clock_TextView"
                        android:text="@string/txt_Days" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtHours"
                        style="@style/clock_TextView"
                        android:textSize="30dp"/>

                    <TextView
                        android:id="@+id/tvHours"
                        style="@style/clock_TextView"
                        android:text="@string/txt_Hours" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtMins"
                        style="@style/clock_TextView"
                        android:textSize="30dp"/>

                    <TextView
                        android:id="@+id/tvMins"
                        style="@style/clock_TextView"
                        android:text="@string/txt_Mins" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtSecs"
                        style="@style/clock_TextView"
                        android:textSize="30dp"/>

                    <TextView
                        android:id="@+id/tvSecs"
                        style="@style/clock_TextView"
                        android:text="@string/txt_Secs" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
